Too much acrylic effect fixes

--- a/sass/components/_datepicker.scss
+++ b/sass/components/_datepicker.scss
@@ -157,10 +157,6 @@
         background-color: rgba(var(--secondary-color-rgb), 0.50);
     }
 
-    &.acrylic .datepicker-date-display {
-        background-image: $acrylic-background;
-    }
-
     .datepicker-calendar-container {
         background-color: #FFF;
     }
