--- a/sass/components/_timepicker.scss
+++ b/sass/components/_timepicker.scss
@@ -74,10 +74,6 @@
         background-color: rgba(var(--secondary-color-rgb), 0.50);
     }
 
-    &.acrylic .timepicker-digital-display {
-        background-image: $acrylic-background;
-    }
-
     .timepicker-analog-display {
         background-color: #FFF;
     }
